# RamanMorph

./: .gitignore  README.md  __init__.py  pyproject.toml
RamanMorph3/: README.md
RamanMorph3/ramanmorph3/: __init__.py  logging_utils.py
RamanMorph3/ramanmorph3/io/: __init__.py  common.py  npz.py  wdf.py
RamanMorph3/ramanmorph3/morphology/: __init__.py  envelopes.py  filters.py  interpolation.py
RamanMorph3/ramanmorph3/peaks/: __init__.py  identification.py  metrics.py  peak_finder.py
RamanMorph3/ramanmorph3/statistics/: __init__.py  cumulative.py  noise.py  scoring.py
RamanMorph_1_0/: README.txt
RamanMorph_1_0/test_files/: MOPPP.txt  buphedrone.txt
ramanmorph3/: __init__.py  logging_utils.py
ramanmorph3/io/: __init__.py  common.py  npz.py  wdf.py
ramanmorph3/morphology/: __init__.py  envelopes.py  filters.py  interpolation.py
ramanmorph3/peaks/: __init__.py  identification.py  metrics.py  peak_finder.py
ramanmorph3/statistics/: __init__.py  cumulative.py  noise.py  scoring.py
scripts/: make_morphology_presentation.py
zz_legacy/RamanMorph_1_0/: RamanMorph.ini  RamanMorph.py  data_utilizers.py  morphological_operations.py  peak_finder.py  statistical_tools.py
zz_legacy/RamanMorph_1_0/test_files/: butylone.txt
zz_legacy/RamanMorph_2_0/: RamanMorph.py
